put finishing touches

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -138,7 +138,7 @@ Only one descendant per slide section can be stretched
 						<h2>That's it.</h2>
 						<p>Thanks for coming.</p>
 						<p class="fragment">Come back again</p>
-						<span class="fragment grow">soon.</span></p>
+						<p class="fragment"><span class="fragment grow">soon.</span></p>
 
 						<aside class="notes">
 							This slide has fragments which are also stepped through in the notes window.
