put finishing touches

--- a/reveal/index.html
+++ b/reveal/index.html
@@ -93,7 +93,7 @@ Only one descendant per slide section can be stretched
 			<div class="slides">
 				<section>
 					<h1>For Garima</h1>
-					<h2>Mera Pyaari</h2>
+					<h2>Hi Pyaari!</h2>
 					<h3></h3>
 					<p>
 						<small>Winter Maxwell Thayer, MSPH<a href="mailto:wthayer1@jhmi.edu"></a> </small>
