--- a/app/index.html
+++ b/app/index.html
@@ -85,44 +85,25 @@ Winter Maxwell Thayer
 						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
 							<param name="src" value="resources/university.shield.large.white.svg">
 						Johns Hopkins University School of Nursing
-					</object></div>
-
+						</object>
+					</div>
 					<h2>Levels of abstraction</h2>
 					<div class="arrow-svg-container arrow-lessMore arrow-left">
 						<svg class="scaling-svg" viewBox="0 0 70 570">
 							<use xlink:href="#arrow"></use>
 						</svg>
 					</div>
-
-					<!-- <div class="inSlide" float="left"> -->
-					<!-- <span class="inSlide"> -->
-					<!-- <object type="image/svg+xml" data="resources/arrow_lessMore"> -->
-					<!-- <div class="scaling-svg-container"> -->
-						<!-- <object class="arrow-lessMore" > -->
-						<!-- <object type="image/svg+xml" src="resources/arrow_lessMore"> -->
-						<!-- <svg viewBox="0 0 70 470"> -->
-							<!-- <use xlink:href="#arrow"></use> -->
-						<!-- </svg> -->
-					<!-- </object> -->
-					<!-- </div> -->
-					<!-- </object> -->
-					<!-- </span> -->
-				<!-- </div> -->
-
-
-
-						<!-- <img src="resources/arrow_lessMore.svg"></img> -->
-						<!-- <object id='arrow_lessMore' type="image/svg+xml" align="left" data-height="100%" opacity="0.8" declare> -->
-						<!-- <object id="arrow-lessMore" type="image/svg+xml" color="#ffffff" align="left" height="450pt" opacity="0.8" margin="5%" declare>
-							<param name="src" value="resources/arrow_lessMore.svg" color="#ffffff">
-							<use xlink:href="#arrow" color="#ffffff"></use> -->
-					<!-- </object></div> -->
 					<div class="inSlide">
 						<p class="box">Grand theory</p>
 						<p class="box">Middle-range theory</p>
 						<p class="box">Conceptual model</p>
 						<p class="box">Data</p>
 						<p class="box">'Real' world</p>
+					</div>
+					<div class="arrow-svg-container arrow-lessMore arrow-right">
+						<svg class="scaling-svg" viewBox="0 0 70 570">
+							<use xlink:href="#arrow"></use>
+						</svg>
 					</div>
 					<h6>Adapted from http://publishingarchaeology.blogspot.com/2011/07/why-dont-archaeologists-talk-about.html &nbsp;&nbsp; Last accessed: 2019-05-02</h6>
 
