made minor changes

--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,11 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Levels of abstraction</h2>
+					<div class="par-left">
+						<p>Breadth</p>
+						<p>of</p>
+						<p>explanation</p>
+					</div>
 					<div class="arrow-svg-container arrow-lessMore arrow-left">
 						<svg class="scaling-svg" viewBox="0 0 70 570">
 							<use xlink:href="#arrow"></use>
