added fragment to slide three

--- a/app/index.html
+++ b/app/index.html
@@ -1617,54 +1617,15 @@ Winter Maxwell Thayer
 							<use xlink:href="#less" class="text-less"></use>
 						</svg>
 					</div>
-					<div class="inSlide">
+					<div class="inSlide fragment fade-out" data-fragment-index="0">
 						<p class="box">Grand theory</p>
 						<p class="box">Middle-range theory</p>
 						<p class="box">Conceptual model</p>
 						<p class="box">Data</p>
 						<p class="box">'Real' world</p>
 					</div>
-					<div class="arrow-svg-container arrow-lessMore arrow-right">
-						<svg class="scaling-svg" viewBox="0 0 70 570">
-							<use xlink:href="#Arrow"></use>
-							<use xlink:href="#more" class="text-more"></use>
-							<use xlink:href="#less" class="text-less"></use>
-						</svg>
-					</div>
-					<div class="par-right">
-						<p padding-left="2em">Empirical</p>
-						<p>  </p>
-						<p padding-right="2em">content</p>
-					</div>
-					<h6>Adapted from http://publishingarchaeology.blogspot.com/2011/07/why-dont-archaeologists-talk-about.html &nbsp;&nbsp; Last accessed: 2019-05-02</h6>
-					<div class="foot"></div>
-				</section>
-
-				<section id="introduction" data-transition="fade-in slide-out">
-					<div id="section-header" class="head">
-						<div id="header-left" class="header-left">
-							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
-							<p id="outline-progress" class="outline-indicator">Introduction</p>
-						</div>
-						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
-							<param name="src" value="resources/university.shield.large.white.svg">
-						Johns Hopkins University School of Nursing
-						</object>
-					</div>
-					<h2>Levels of abstraction</h2>
-					<div class="par-left">
-						<p>Breadth</p>
-						<p>of</p>
-						<p>explanation</p>
-					</div>
-					<div class="arrow-svg-container arrow-lessMore arrow-left">
-						<svg class="scaling-svg" viewBox="0 0 70 570">
-							<use xlink:href="#Arrow"></use>
-							<use xlink:href="#more" class="text-more"></use>
-							<use xlink:href="#less" class="text-less"></use>
-						</svg>
-					</div>
-					<div class="inSlide">
+					<!-- <span class="fragment fade-in"> -->
+					<div class="inSlide fragment" data-fragment-index="0">
 						<p class="box-small ontepi">Ontology and epistemology</p>
 						<p class="box-small">Grand theory</p>
 						<p class="box-small">Middle-range theory</p>
