--- a/app/index.html
+++ b/app/index.html
@@ -1649,6 +1649,27 @@ Winter Maxwell Thayer
 					<div class="foot"></div>
 				</section>
 
+				<!-- <section id="introduction">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Introduction</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+								Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Is theory important?</h2>
+					<div class="slide-content">
+						<p><span class="highlight-yellow">Santiago Ram&ograve;n y Cajal</span> 1853–1984</p>
+						<p>Awarded a Nobel prize for work characterizing the neuron</p>
+						<p>Took a strict empircal view, writing, <blockquote>"Hypotheses come and go but the facts remain. Theories abandon us, whereas the facts defend us"</blockquote></p>
+					</div>
+					<h6>Jairo A Rozo and Antonio Rodr&iacute;guez-Moreno. Santiago ram&ograve;on y cajal and ivan petrovic pavlov: their parallel scientific lives, schools and nobel prizes. Frontiers in neuroanatomy, 9:73, 2015.</h6>
+					<div class="foot"></div>
+				</section> -->
+
 				<section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -1682,7 +1703,273 @@ Winter Maxwell Thayer
 						Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<!-- <h2>Practice setting</h2> -->
+					<p class="slide-content">An estimated <span class="highlight-yellow">174,650 cases</span> of prostate cancer will be diagnosed in 2019.</p>
+					<p class="slide-content">Out of every 100 patients</p>
+					<ul>
+						<p><span class="highlight-yellow">77</span> will be confined to the prostate</p>
+						<p><span class="highlight-yellow">13</span> will have spread to nearby lymph nodes</p>
+						<p><span class="highlight-yellow">6</span>  will have metastasized elsewhere in the body</p>
+					</ul>
+					<!-- <div>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="50" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+					</div> -->
+					<div class="foot"></div>
+				</section>
+
+				<section id="practice-setting">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Practice Setting</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<p class="slide-content">Almost all patients with local or regional disease <span class="highlight-yellow">survive at least five years</span></p>
+					<p class="slide-content">Only 1/3 of patients with distant metastases are alive after five years</p>
+
+					<div data-fragment-index="0">
+						<svg class="men fragment fade-out"  viewBox="0 50 40 50" width="150" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men" viewBox="0 50 40 50" width="150" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+						<svg class="men fragment fade-out" viewBox="0 50 40 50" width="150" preseverAspectRatio="xMidYMid meet">
+							<use xlink:href="#manZero" class="man-zero"></use>
+						</svg>
+					</div>
+					<div class="foot"></div>
+				</section>
+
+				<section id="practice-setting">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Practice Setting</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
 					<p class="slide-content">Once diagnosed, patients are put into <span class="highlight-yellow">risk groups</span> and offered treatment based on</p>
 					<ul>
 						<p>• disease stage </p>
@@ -1733,7 +2020,7 @@ Winter Maxwell Thayer
 						Johns Hopkins University School of Nursing
 						</object>
 					</div>
-					<p class="slide-content">Patients with <span class="highlight-yellow">metastatic</span> disease may be offered radiation, surgical or hormonal treatments</p>
+					<p class="slide-content">Patients with <span class="highlight-yellow">metastatic</span> disease may be offered radiation, or hormonal treatments</p>
 					<div>
 					  <svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
 							<use xlink:href="#radiation" class="treatment-symbol"></use>
@@ -1748,6 +2035,67 @@ Winter Maxwell Thayer
 							<use xlink:href="#needle" class="treatment-symbol" ></use>
 						</svg>
 					</div>
+					<div class="foot"></div>
+				</section>
+
+				<section id="practice-setting">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Practice Setting</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<p class="slide-content">Patients whose cancer <span class="highlight-yellow">does not respond</span> to initial treatment, <span class="highlight-yellow">recurs</span>, or <span class="highlight-yellow">progresses</span> may be offered radiation, hormonal treatments, immunotherapy, or other cancer-targeting agents</p>
+					<div>
+					  <svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
+							<use xlink:href="#radiation" class="treatment-symbol"></use>
+						</svg>
+						<!-- <svg viewBox="0 0 360 432" height=175 style="padding-right: 25px;">
+							<use xlink:href="#scalpel" class="treatment-symbol"></use>
+						</svg> -->
+						<svg viewBox="0 0 360 432" height=175>
+							<use xlink:href="#pill-symbol" class="treatment-symbol" ></use>
+						</svg>
+						<svg viewBox="0 0 360 432" height=175>
+							<use xlink:href="#needle" class="treatment-symbol" ></use>
+						</svg>
+					</div>
+					<div class="foot"></div>
+				</section>
+
+				<section id="practice-setting">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Practice Setting</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<div class="row">
+						<div class="column">
+							<svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
+								<use xlink:href="#radiation" class="treatment-symbol"></use>
+							</svg>
+							<p>Trips to the hospital once-per-week for three months</p>
+							<p>Full insurance coverage</p>
+							<p>Trips</p>
+						</div>
+						<div class="column">
+							<svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
+								<use xlink:href="#pill-symbol" class="treatment-symbol"></use>
+							</svg>
+								<p>Trips to the hospital</p>
+								<p>Trips to the hospital</p>
+								<p>Trips to the hospital</p>
+						</div>
+				</div>
 					<div class="foot"></div>
 				</section>
 
