made changes, chaning commit address

--- a/app/index.html
+++ b/app/index.html
@@ -2340,6 +2340,30 @@ Winter Maxwell Thayer
 					</aside>
 				</section>
 
+				<section id="middle-range-theory">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Grand theory</h2>
+					<div class="inSlide">
+
+					</div>
+					<h6>Middle Range Theories Application to Nursing Research 3rd ed. Peterson and Bredow</h6>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+
+
 				<section id="references">
 						<h2>References</h2>
 						<table class="inSlide">
@@ -2421,7 +2445,17 @@ Winter Maxwell Thayer
 						</table>
 				</section>
 
-		<script src="js/reveal.js"></script>
+
+				<!-- <section> -->
+					<!-- <div id="myBib"></div> -->
+					<!-- <script type="text/javascript">
+
+					</script>
+
+					cite.format('bibliography', {append: ' [foobar]'}) -->
+
+				</section>
+		<!-- <script src="js/reveal.js"></script> -->
 
 		<script>
 			// More info about config & dependencies:
@@ -2444,6 +2478,21 @@ Winter Maxwell Thayer
 		m = D.getMonth() + 1;
 		d = D.getFullYear() + " • " + m + " • " + D.getDate();
 		document.getElementById("today").innerHTML = d;
+
+
+		// const Cite = require('citation-js');
+		// const fs = require('fs');
+		// // look for a references.bib file to read - add try-catch!
+		// let myBib = fs.readFileSync("resources/references.bib", "utf8");
+		// // instantiate a Cite class then format it using the citation-js package
+		// let thisBibliography = new Cite(myBib);
+		// let output = thisBibliography.format('bibliography', {
+		// 	format: 'html',
+		// 	template: 'apa',
+		// 	lang: 'en-US'
+		// });
+		// document.getElementById("myBib").innerHTML = output;
+
 
 		// Javascript to get the section name
 		// From: https://love2dev.com/blog/javascript-includes/
