changed commented lines

--- a/app/index.html
+++ b/app/index.html
@@ -3455,8 +3455,7 @@ Winter Maxwell Thayer
 					<div>
 					  <svg viewBox="0 0 360 432" height=175 style="padding-right: 50px;">
 							<use xlink:href="#radiation" class="treatment-symbol"></use>
-						</svg>
-						<!-- <svg viewBox="0 0 360 432" height=175 style="padding-right: 25px;">
+						</svg> <svg viewBox="0 0 360 432" height=175 style="padding-right: 25px;">
 							<use xlink:href="#scalpel" class="treatment-symbol"></use>
 						</svg> -->
 						<!-- <svg viewBox="0 0 360 432" height=175>
@@ -3467,7 +3466,7 @@ Winter Maxwell Thayer
 						</svg>
 					</div>
 					<div class="foot"></div>
-				</section> --> -->
+				</section> -->
 
 				<section id="practice-setting">
 					<div id="section-header" class="head">
@@ -3615,9 +3614,6 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Grand theory</h2>
-					<!-- <div class="fragment fade-out"> -->
-						<!-- <img srf="resources/RUT-png/SE_Chronos.png" alt="Social-ecological model depicted over time"></img> -->
-						<!-- <div class="centered"> -->
 							<svg class="fragment fade-out inSlide" data-fragment-index="0" viewBox="0 0 690 690" height="50%">
 								<use xlink:href="#model-se"></use>
 							</svg>
@@ -3634,15 +3630,6 @@ Winter Maxwell Thayer
 							<svg class="fragment inSlide" data-fragment-index="1" viewBox="0 0 600 600" height="35%" transform="translate(745,121)">
 								<use xlink:href="#vision"></use>
 							</svg>
-							<!-- <svg class="fragment fade-out inSlide" data-fragment-index="0" viewBox="600 100 1008 639" height="50%" data-fragment-index="0" transform="rotate(45) translate(50,0)">
-								<use xlink:href="#model-se-time" style="fill: url(#linear-gradient);"></use>
-							</svg> -->
-						<!-- </div> -->
-					<!-- </div> -->
-					<!-- <div class="fragment fade-out"> -->
-						<!-- <img srf="resources/RUT-png/SE_Chronos.png" alt="Social-ecological model depicted over time"></img> -->
-						<!-- <img src="SE_Chronos.png" background="rgba(0, 0, 0, 0)"></img> -->
-					<!-- </div> -->
 					<h6></h6>
 					<div class="foot"></div>
 					<aside class="notes">
