--- a/app/index.html
+++ b/app/index.html
@@ -3730,7 +3730,7 @@ Winter Maxwell Thayer
 							<svg class="svg-left" height="45%" viewBox="0 0 690 690">
 								<use xlink:href="#manual"></use>
 							</svg>
-							<svg viewBox="0 0 500 500" height="15%">
+							<svg viewBox="0 0 500 500" height="150px">
 								<use xlink:href="#brain"></use>
 							</svg>
 							<svg class="svg-right" height="30%" viewBox="0 0 408 408">
