--- a/app/index.html
+++ b/app/index.html
@@ -2737,8 +2737,8 @@ Winter Maxwell Thayer
   <defs>
     <style>
       .utility-box-attr-1 {
-        fill: #231f20;
-        stroke: #969696;
+        fill: #191919;
+        stroke: inherit;
       }
 
       .utility-box-attr-1, .utility-box-attr-2 {
@@ -2747,8 +2747,8 @@ Winter Maxwell Thayer
 
       .utility-box-attr-2 {
         font-size: 60px;
-        fill: #d8d8d8;
-        stroke: #434343;
+        fill: inherit;
+        stroke: inherit;
         font-family: Arial-BoldMT, Arial;
         font-weight: 700;
       }
@@ -2777,6 +2777,151 @@ Winter Maxwell Thayer
       <text class="utility-box-attr-2" transform="translate(121.07 200.67)">Option<tspan class="utility-box-attr-3" x="193.27" y="0" xml:space="preserve"> A</tspan><tspan class="utility-box-attr-4"><tspan x="15.01" y="57.6">Attribute 1</tspan><tspan x="15.01" y="115.2">Attribute 2</tspan><tspan x="-14.32" y="172.8">...</tspan><tspan class="utility-box-attr-5" x="25.69" y="172.8"> </tspan><tspan x="36.38" y="172.8">Attribute N</tspan></tspan></text>
     </g>
   </g>
+</svg>
+<!-- bayes theorem -->
+<svg id="bayes" data-name="bayes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000" style="display: none;">
+  <defs>
+    <style>
+      .bayes-1, .bayes-28 {
+        font-size: 72px;
+      }
+
+      .bayes-1, .bayes-13, .bayes-28, .bayes-29, .bayes-4 {
+        /* fill: inherit; */
+      }
+
+      .bayes-1, .bayes-13, .bayes-4 {
+        font-family: ArialMT, Arial;
+      }
+
+      .bayes-2 {
+        font-family: Arial-ItalicMT, Arial;
+        font-style: italic;
+      }
+
+      .bayes-28, .bayes-3 {
+        font-family: ArialMT, Arial;
+      }
+
+      .bayes-4 {
+        font-size: 60px;
+      }
+
+      .bayes-5 {
+        letter-spacing: -0.02em;
+      }
+
+      .bayes-6 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-7 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-8 {
+        letter-spacing: 0.01em;
+      }
+
+      .bayes-9 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-10 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-11 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-12 {
+        letter-spacing: -0.02em;
+      }
+
+      .bayes-13 {
+        font-size: 40px;
+      }
+
+      .bayes-14 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-15 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-16 {
+        letter-spacing: 0.01em;
+      }
+
+      .bayes-17 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-18 {
+        letter-spacing: 0.03em;
+      }
+
+      .bayes-19 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-20 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-21 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-22 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-23 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-24 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-25 {
+        letter-spacing: 0.02em;
+      }
+
+      .bayes-26 {
+        letter-spacing: -0.01em;
+      }
+
+      .bayes-27 {
+        letter-spacing: 0em;
+      }
+
+      .bayes-29 {
+        stroke: inherit;
+        stroke-miterlimit: 10;
+        stroke-width: 2px;
+      }
+    </style>
+  </defs>
+  <title>bayes-theorem</title>
+	<g id="bayes-theorem">
+	  <text class="bayes-1 posterior" transform="translate(25 683.96)">P(<tspan class="bayes-2" x="58.75" y="0">H</tspan><tspan class="bayes-3" x="110.75" y="0" xml:space="preserve"> | </tspan><tspan class="bayes-2" x="169.46" y="0">e</tspan><tspan class="bayes-3 bayes-equals-sign" x="209.5" y="0">) = </tspan></text>
+	  <text class="bayes-4 posterior" transform="translate(25 857.51)"><tspan class="bayes-5">P</tspan><tspan x="30.42" y="0">os</tspan><tspan class="bayes-6" x="87.12" y="0">t</tspan><tspan x="106.62" y="0">e</tspan><tspan class="bayes-7" x="136.68" y="0">r</tspan><tspan x="156.54" y="0">ior</tspan></text>
+	  <text class="bayes-4 likelihood" transform="translate(25 222.65)">Likelihood</text>
+	  <text class="bayes-4 marginal" transform="translate(25 388.82)"><tspan class="bayes-8">M</tspan><tspan x="48.6" y="0">a</tspan><tspan class="bayes-9" x="77.52" y="0">r</tspan><tspan class="bayes-10" x="96.66" y="0">g</tspan><tspan class="bayes-11" x="129.84" y="0">inal</tspan></text>
+	  <text class="bayes-4 prior" transform="translate(25 108.01)"><tspan class="bayes-12">P</tspan><tspan class="bayes-7" x="30.96" y="0">r</tspan><tspan x="50.82" y="0">ior</tspan></text>
+	  <text class="bayes-13 posterior" transform="translate(333.09 843.31)"><tspan class="bayes-14">B</tspan><tspan class="bayes-15" x="21.84" y="0">elief a</tspan><tspan class="bayes-16" x="120.16" y="0">f</tspan><tspan class="bayes-17" x="132.28" y="0">t</tspan><tspan x="145.28" y="0">er obse</tspan><tspan class="bayes-18" x="267.47" y="0">r</tspan><tspan x="281.55" y="0">ving new in</tspan><tspan class="bayes-19" x="474.91" y="0">f</tspan><tspan x="486.07" y="0">o</tspan><tspan class="bayes-14" x="508.03" y="0">r</tspan><tspan x="521.27" y="0">m</tspan><tspan class="bayes-20" x="554.63" y="0">a</tspan><tspan x="573.75" y="0">tion</tspan></text>
+	  <text class="bayes-13 likelihood" transform="translate(333.09 208.45)"><tspan class="bayes-14">B</tspan><tspan class="bayes-15" x="21.84" y="0">elief about the in</tspan><tspan class="bayes-19" x="304.15" y="0">f</tspan><tspan x="315.31" y="0">o</tspan><tspan class="bayes-14" x="337.27" y="0">r</tspan><tspan x="350.51" y="0">m</tspan><tspan class="bayes-20" x="383.88" y="0">a</tspan><tspan x="402.99" y="0">tion, </tspan><tspan class="bayes-21" x="486.51" y="0">g</tspan><tspan x="508.63" y="0">i</tspan><tspan class="bayes-22" x="517.99" y="0">v</tspan><tspan x="536.83" y="0">en </tspan><tspan x="0" y="48">wh</tspan><tspan class="bayes-20" x="51.64" y="48">a</tspan><tspan class="bayes-23" x="70.76" y="48">t </tspan><tspan class="bayes-24" x="92.48" y="48">w</tspan><tspan x="121.52" y="48">e thoug</tspan><tspan class="bayes-20" x="251.84" y="48">h</tspan><tspan x="273.88" y="48">t be</tspan><tspan class="bayes-19" x="338.39" y="48">f</tspan><tspan x="349.55" y="48">o</tspan><tspan class="bayes-22" x="371.51" y="48">r</tspan><tspan x="384.19" y="48">e</tspan></text>
+	  <text class="bayes-13 marginal" transform="translate(333.09 374.62)"><tspan class="bayes-14">B</tspan><tspan class="bayes-15" x="21.84" y="0">elief about the in</tspan><tspan class="bayes-19" x="304.15" y="0">f</tspan><tspan x="315.31" y="0">o</tspan><tspan class="bayes-14" x="337.27" y="0">r</tspan><tspan x="350.51" y="0">m</tspan><tspan class="bayes-20" x="383.88" y="0">a</tspan><tspan x="402.99" y="0">tion </tspan><tspan class="bayes-21" x="478.23" y="0">g</tspan><tspan x="500.35" y="0">i</tspan><tspan class="bayes-22" x="509.71" y="0">v</tspan><tspan x="528.55" y="0">en </tspan><tspan x="0" y="48">e</tspan><tspan class="bayes-24" x="20.04" y="48">v</tspan><tspan x="38.88" y="48">e</tspan><tspan class="bayes-18" x="58.92" y="48">r</tspan><tspan x="73" y="48">ything </tspan><tspan class="bayes-24" x="189.68" y="48">w</tspan><tspan x="218.72" y="48">e </tspan><tspan class="bayes-25" x="247.23" y="48">k</tspan><tspan class="bayes-15" x="266.67" y="48">n</tspan><tspan class="bayes-26" x="288.87" y="48">o</tspan><tspan x="310.55" y="48">w about the </tspan><tspan class="bayes-22" x="520.19" y="48">w</tspan><tspan x="549.23" y="48">o</tspan><tspan class="bayes-27" x="571.19" y="48">r</tspan><tspan x="584.43" y="48">ld</tspan></text>
+	  <text class="bayes-13 prior" transform="translate(333.09 93.81)"><tspan class="bayes-14">B</tspan><tspan class="bayes-15" x="21.84" y="0">elief p</tspan><tspan class="bayes-14" x="123.64" y="0">r</tspan><tspan x="136.88" y="0">ior </tspan><tspan class="bayes-17" x="189.76" y="0">t</tspan><tspan x="202.76" y="0">o new in</tspan><tspan class="bayes-19" x="344.91" y="0">f</tspan><tspan x="356.07" y="0">o</tspan><tspan class="bayes-14" x="378.03" y="0">r</tspan><tspan x="391.27" y="0">m</tspan><tspan class="bayes-20" x="424.63" y="0">a</tspan><tspan x="443.75" y="0">tion</tspan></text>
+	  <text class="bayes-28 prior" transform="translate(445.94 621.7)">P(<tspan class="bayes-2" x="72" y="0">H</tspan><tspan x="124" y="0">)</tspan></text>
+	  <text class="bayes-1 likelihood" transform="translate(624.47 621.7)">P(<tspan class="bayes-2" x="58.75" y="0">e</tspan><tspan class="bayes-3" x="98.79" y="0" xml:space="preserve"> | </tspan><tspan class="bayes-2" x="157.51" y="0">H</tspan><tspan class="bayes-3" x="209.5" y="0">)</tspan></text>
+	  <text class="bayes-1 marginal" transform="translate(586.48 736.21)">P(<tspan class="bayes-2" x="58.75" y="0">e</tspan><tspan class="bayes-3" x="98.79" y="0">)</tspan></text>
+	  <line id="line-divisor" class="bayes-29" x1="350" y1="660" x2="950" y2="660"/>
+	</g>
 </svg>
 
 
@@ -2929,7 +3074,7 @@ Winter Maxwell Thayer
 					</div>
 					<h2>A few caveats</h2>
 					<div class="slide-content">
-						<p class="highlight-yellow">Terminology varies</p>
+						<p>Terminology varies</p>
 						<p>Disagreements exist about what theory is</p>
 						<p>Some adhere <em>strictly</em> to nursing theory</p>
 					</div>
@@ -3376,6 +3521,7 @@ Winter Maxwell Thayer
 							<use href="#a-2" class="treatment-symbol"></use>
 							<use href="#ph-10" class="treatment-symbol"></use>
 							<use href="#ph-11" class="treatment-symbol"></use>
+							<use href="#ph-12" class="treatment-symbol"></use>
 							<use href="#g-4" class="treatment-symbol"></use>
 							<use href="#a-5" class="treatment-symbol"></use>
 							<use href="#g-5" class="treatment-symbol"></use>
@@ -3410,7 +3556,7 @@ Winter Maxwell Thayer
 							<use xlink:href="#chemo" class="treatment-symbol"></use>
 						</svg>
 						<svg viewBox="0 0 360 432" height=150>
-							<use xlink:href="#pill-symbol" class="treatment-symbol"></use>
+							<use xlink:href="#pill-symbol" class="treatment-symbol fragment fade-out"></use>
 						</svg>
 						<svg viewBox="0 0 360 432" height=150 class="treatment-symbol fragment fade-out">
 							<use href="#first" class="treatment-symbol"></use>
@@ -3423,6 +3569,7 @@ Winter Maxwell Thayer
 							<use href="#a-2" class="treatment-symbol"></use>
 							<use href="#ph-10" class="treatment-symbol"></use>
 							<use href="#ph-11" class="treatment-symbol"></use>
+							<use href="#ph-12" class="treatment-symbol"></use>
 							<use href="#g-4" class="treatment-symbol"></use>
 							<use href="#a-5" class="treatment-symbol"></use>
 							<use href="#g-5" class="treatment-symbol"></use>
@@ -3561,10 +3708,6 @@ Winter Maxwell Thayer
 					<div class="inSlide">
 						<p>Patients are often faced with rapid downward trajectory, diminishing treatment options, and ambiguity <p>
 						<p>As care progresses toward palliation, decision partners often play the role of proxy decision makers</p>
-						<p>How can we support people through these difficult decisions?</p>
-					</div>
-					<div class="foot"></div>
-					<aside class="notes">
 						This brings us to the imperative for our research.
 
 						If we're going to do useful research, it's probably useful to have a theory about what is actually happening when people make these decisions.
@@ -3706,7 +3849,7 @@ Winter Maxwell Thayer
 					</div>
 					<h2>Revealed preference theory</h2>
 							<svg viewBox="0 0 1354.66 918.18" height="80%" style="position: absolute;left: 3%;top: 35%">
-								<use xlink:href="#utility-box-attr"></use>
+								<use href="#utility-box-attr"></use>
 							</svg>
 					<h6></h6>
 					<div class="foot"></div>
@@ -3727,13 +3870,13 @@ Winter Maxwell Thayer
 						</object>
 					</div>
 					<h2>Dual-process theory</h2>
-							<svg class="svg-left" height="45%" viewBox="0 0 690 690">
+							<svg class="svg-left" height="350px" viewBox="0 0 690 690">
 								<use xlink:href="#manual"></use>
 							</svg>
 							<svg viewBox="0 0 500 500" height="150px">
 								<use xlink:href="#brain"></use>
 							</svg>
-							<svg class="svg-right" height="30%" viewBox="0 0 408 408">
+							<svg class="svg-right" height="250px" viewBox="0 0 408 408">
 								<use xlink:href="#automatic"></use>
 							</svg>
 					<h6></h6>
@@ -3758,10 +3901,35 @@ Winter Maxwell Thayer
 							<!-- <svg viewBox="0 0 690 690" height="50%">
 								<use xlink:href="#manual"></use>
 							</svg> -->
-							<svg viewBox="0 0 500 500" height="15%">
+							<svg viewBox="0 0 500 500" height="150px">
 								<use xlink:href="#brain"></use>
 							</svg>
-							<div><ul><p>People violate the assumptions of rational choice</p><p>Conceptualize probability as a degree of belief</p><p>Rational agents maximize <em>expected</em> utility</p></ul></div>
+							<div><ul><p>People violate the assumptions of rational choice</p><p>Conceptualize <span class="highlight-yellow">probability as a degree of belief</span></p><p>Rational agents maximize <em>expected</em> utility</p></ul></div>
+					<h6></h6>
+					<div class="foot"></div>
+					<aside class="notes">
+
+					</aside>
+				</section>
+
+				<section id="middle-range-theory">
+					<div id="section-header" class="head">
+						<div id="header-left" class="header-left">
+							<p id="header-name">Winter Maxwell Thayer, MSPH</p>
+							<p id="outline-progress" class="outline-indicator">Middle Range Theory</p>
+						</div>
+						<object id='logo-white' class="logo-right" type="image/svg+xml" align="right" opacity="0.8" declare>
+							<param name="src" value="resources/university.shield.large.white.svg">
+						Johns Hopkins University School of Nursing
+						</object>
+					</div>
+					<h2>Bayesian probability theory</h2>
+					<div class="inSlide" top="35%"></div>
+						<svg class="inSlide" viewBox="0 0 1000 1000" height="500px">
+							<use href="#bayes-theorem"></use>
+						</svg>
+					<!-- </div> -->
+					<p class="par-right">Probability as a degree of belief</p>
 					<h6></h6>
 					<div class="foot"></div>
 					<aside class="notes">
