--- a/app/index.html
+++ b/app/index.html
@@ -3636,7 +3636,7 @@ Winter Maxwell Thayer
 					</div>
 					<div class="foot"></div>
 				</section>
-
+<!-- 
 				<section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -3657,7 +3657,7 @@ Winter Maxwell Thayer
 						</ul>
 					</div>
 					<div class="foot"></div>
-				</section>
+				</section> -->
 
 				<section id="practice-setting">
 					<div id="section-header" class="head">
@@ -3779,8 +3779,6 @@ Winter Maxwell Thayer
 
 					</aside>
 				</section>
-
-
 
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
