--- a/app/index.html
+++ b/app/index.html
@@ -3636,7 +3636,7 @@ Winter Maxwell Thayer
 					</div>
 					<div class="foot"></div>
 				</section>
-<!-- 
+<!--
 				<section id="practice-setting">
 					<div id="section-header" class="head">
 						<div id="header-left" class="header-left">
@@ -3708,8 +3708,8 @@ Winter Maxwell Thayer
 					<div class="inSlide">
 						<p>Patients are often faced with rapid downward trajectory, diminishing treatment options, and ambiguity <p>
 						<p>As care progresses toward palliation, decision partners often play the role of proxy decision makers</p>
-						This brings us to the imperative for our research.
-
+						This brings us to the imperative for our research.	
+					<aside class="notes">
 						If we're going to do useful research, it's probably useful to have a theory about what is actually happening when people make these decisions.
 					</aside>
 				</section>
