--- a/app/index.html
+++ b/app/index.html
@@ -3708,11 +3708,16 @@ Winter Maxwell Thayer
 					<div class="inSlide">
 						<p>Patients are often faced with rapid downward trajectory, diminishing treatment options, and ambiguity <p>
 						<p>As care progresses toward palliation, decision partners often play the role of proxy decision makers</p>
-						This brings us to the imperative for our research.	
+						<p>How can we <span class="highlight-yellow">support people</span> through these difficult decisions?</p>
+					</div>
+					<div class="foot"></div>
 					<aside class="notes">
-						If we're going to do useful research, it's probably useful to have a theory about what is actually happening when people make these decisions.
+						This brings us to the imperative for our research. If we're going to do useful research, it's probably useful to have a theory about what is actually happening when people make these decisions.
 					</aside>
 				</section>
+
+				<aside class="notes">
+				</aside>
 
 				<section id="middle-range-theory">
 					<div id="section-header" class="head">
