close to final draft

--- a/app/theory-and-ethics.html
+++ b/app/theory-and-ethics.html
@@ -4,7 +4,6 @@
 
 <head>
 <title>theory-and-ethics</title>
-<link rel=stylesheet type="text/css" href="css/reveal.css">
 </head>
 
 <body>
@@ -12,14 +11,75 @@
 <!-- This document was automatically generated with bibtex2html 1.99
      (see http://www.lri.fr/~filliatr/bibtex2html/),
      with the following command:
-     bibtex2html -a -css css/reveal.css resources/theory-and-ethics.bib  -->
+     bibtex2html app/resources/theory-and-ethics.bib  -->
 
 
 <table>
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="parse2016have">1</a>]
+[<a name="howlader2019seer">1</a>]
+</td>
+<td class="bibtexitem">
+N&nbsp;Howlader, Krapcho&nbsp;M NA, D&nbsp;Miller, A&nbsp;Brest, M&nbsp;Yu, J&nbsp;Ruhl, Z&nbsp;Tatalovich,
+  A&nbsp;Mariotto, DR&nbsp;Lewis, HS&nbsp;Chen, et&nbsp;al.
+ Seer cancer statistics review, 1975-2016 national cancer institute.
+ <em>Bethesda, MD. National Cancer Institute. Bethesda, MD</em>, 2019.
+[&nbsp;<a href="theory-and-ethics_bib.html#howlader2019seer">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="Khani2018">2</a>]
+</td>
+<td class="bibtexitem">
+Francesca Khani and Brian&nbsp;D. Robinson.
+ <em>Racial Differences</em>, pages 79--98.
+ Springer International Publishing, Cham, 2018.
+[&nbsp;<a href="theory-and-ethics_bib.html#Khani2018">bib</a>&nbsp;| 
+<a href="http://dx.doi.org/10.1007/978-3-319-64096-9_6">DOI</a>&nbsp;| 
+<a href="https://doi.org/10.1007/978-3-319-64096-9_6">http</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="kinlock2016racial">3</a>]
+</td>
+<td class="bibtexitem">
+Ballington&nbsp;L Kinlock, Roland&nbsp;J Thorpe&nbsp;Jr, Daniel&nbsp;L Howard, Janice&nbsp;V Bowie,
+  Louie&nbsp;E Ross, David&nbsp;O Fakunle, and Thomas&nbsp;A LaVeist.
+ Racial disparity in time between first diagnosis and initial
+  treatment of prostate cancer, 2016.
+[&nbsp;<a href="theory-and-ethics_bib.html#kinlock2016racial">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="mohler2019prostate">4</a>]
+</td>
+<td class="bibtexitem">
+James&nbsp;L Mohler, Emmanuel&nbsp;S Antonarakis, Andrew&nbsp;J Armstrong, et&nbsp;al.
+ Prostate cancer, version 2.2019.
+ <em>Journal of the National Comprehensive Cancer Network</em>, pages
+  19--30, 2019.
+[&nbsp;<a href="theory-and-ethics_bib.html#mohler2019prostate">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="parse2016have">5</a>]
 </td>
 <td class="bibtexitem">
 Rosemarie&nbsp;Rizzo Parse.
@@ -32,7 +92,7 @@ Rosemarie&nbsp;Rizzo Parse.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="peterson2009middle">2</a>]
+[<a name="peterson2009middle">6</a>]
 </td>
 <td class="bibtexitem">
 Sandra&nbsp;J Peterson and Timothy&nbsp;S Bredow.
@@ -46,7 +106,38 @@ Sandra&nbsp;J Peterson and Timothy&nbsp;S Bredow.
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wenzel2012cancer">3</a>]
+[<a name="powell2013genes">7</a>]
+</td>
+<td class="bibtexitem">
+Isaac&nbsp;J Powell, Greg Dyson, Susan Land, Julie Ruterbusch, Cathryn&nbsp;H Bock, Steve
+  Lenk, Mehsati Herawi, Richard Everson, Craig&nbsp;N Giroux, Ann&nbsp;G Schwartz, et&nbsp;al.
+ Genes associated with prostate cancer are differentially expressed in
+  african american and european american men.
+ <em>Cancer Epidemiology and Prevention Biomarkers</em>, 22(5):891--897,
+  2013.
+[&nbsp;<a href="theory-and-ethics_bib.html#powell2013genes">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="siegel2019cancer">8</a>]
+</td>
+<td class="bibtexitem">
+Rebecca&nbsp;L Siegel, Kimberly&nbsp;D Miller, and Ahmedin Jemal.
+ Cancer statistics, 2019.
+ <em>CA: a cancer journal for clinicians</em>, 69(1):7--34, 2019.
+[&nbsp;<a href="theory-and-ethics_bib.html#siegel2019cancer">bib</a>&nbsp;]
+
+</td>
+</tr>
+
+
+<tr valign="top">
+<td align="right" class="bibtexnumber">
+[<a name="wenzel2012cancer">9</a>]
 </td>
 <td class="bibtexitem">
 Jennifer Wenzel, Randy&nbsp;A Jones, Rachel Klimmek, Sharon Krumm, Linda&nbsp;P Darrell,
@@ -62,7 +153,7 @@ Jennifer Wenzel, Randy&nbsp;A Jones, Rachel Klimmek, Sharon Krumm, Linda&nbsp;P 
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="wenzel2015model">4</a>]
+[<a name="wenzel2015model">10</a>]
 </td>
 <td class="bibtexitem">
 Jennifer&nbsp;A Wenzel, Olive Mbah, Jiayun Xu, Gyasi Moscou-Jackson, Haneefa Saleem,
@@ -79,7 +170,7 @@ Jennifer&nbsp;A Wenzel, Olive Mbah, Jiayun Xu, Gyasi Moscou-Jackson, Haneefa Sal
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
-[<a name="winzelberg2005beyond">5</a>]
+[<a name="winzelberg2005beyond">11</a>]
 </td>
 <td class="bibtexitem">
 Gary&nbsp;S Winzelberg, Laura&nbsp;C Hanson, and James&nbsp;A Tulsky.
