--- a/app/theory-and-ethics_bib.html
+++ b/app/theory-and-ethics_bib.html
@@ -4,12 +4,59 @@
 
 <head>
 <title>theory-and-ethics.bib</title>
-<link rel=stylesheet type="text/css" href="css/reveal.css">
 </head>
 
 <body>
-<p><a href="index.html">Go to presentation</a></p>
-<h1>theory-and-ethics.bib</h1><a name="parse2016have"></a><pre>
+<h1>theory-and-ethics.bib</h1><a name="howlader2019seer"></a><pre>
+@article{<a href="theory-and-ethics.html#howlader2019seer">howlader2019seer</a>,
+  title = {SEER Cancer Statistics Review, 1975-2016 National Cancer Institute},
+  author = {Howlader, N and NA, Krapcho M and Miller, D and Brest, A and Yu, M and Ruhl, J and Tatalovich, Z and Mariotto, A and Lewis, DR and Chen, HS and others},
+  journal = {Bethesda, MD. National Cancer Institute. Bethesda, MD},
+  year = {2019}
+}
+</pre>
+
+<a name="Khani2018"></a><pre>
+@inbook{<a href="theory-and-ethics.html#Khani2018">Khani2018</a>,
+  author = {Khani, Francesca
+and Robinson, Brian D.},
+  editor = {Robinson, Brian D.
+and Mosquera, Juan Miguel
+and Ro, Jae Y.
+and Divatia, Mukul},
+  title = {Racial Differences},
+  booktitle = {Precision Molecular Pathology of Prostate Cancer},
+  year = {2018},
+  publisher = {Springer International Publishing},
+  address = {Cham},
+  pages = {79--98},
+  isbn = {978-3-319-64096-9},
+  doi = {10.1007/978-3-319-64096-9_6},
+  url = {https://doi.org/10.1007/978-3-319-64096-9_6}
+}
+</pre>
+
+<a name="kinlock2016racial"></a><pre>
+@misc{<a href="theory-and-ethics.html#kinlock2016racial">kinlock2016racial</a>,
+  title = {Racial disparity in time between first diagnosis and initial treatment of prostate cancer},
+  author = {Kinlock, Ballington L and Thorpe Jr, Roland J and Howard, Daniel L and Bowie, Janice V and Ross, Louie E and Fakunle, David O and LaVeist, Thomas A},
+  year = {2016},
+  publisher = {SAGE Publications Sage CA: Los Angeles, CA}
+}
+</pre>
+
+<a name="mohler2019prostate"></a><pre>
+@article{<a href="theory-and-ethics.html#mohler2019prostate">mohler2019prostate</a>,
+  title = {Prostate cancer, version 2.2019},
+  author = {Mohler, James L and Antonarakis, Emmanuel S and Armstrong, Andrew J and others},
+  journal = {Journal of the National Comprehensive Cancer Network},
+  pages = {19--30},
+  year = {2019},
+  publisher = {Harborside Press, LLC}
+}
+</pre>
+
+<a name="parse2016have"></a><pre>
 @misc{<a href="theory-and-ethics.html#parse2016have">parse2016have</a>,
   title = {Where have all the nursing theories gone?},
   author = {Parse, Rosemarie Rizzo},
@@ -24,6 +71,32 @@
   author = {Peterson, Sandra J and Bredow, Timothy S},
   year = {2009},
   publisher = {Lippincott Williams \& Wilkins}
+}
+</pre>
+
+<a name="powell2013genes"></a><pre>
+@article{<a href="theory-and-ethics.html#powell2013genes">powell2013genes</a>,
+  title = {Genes associated with prostate cancer are differentially expressed in African American and European American men},
+  author = {Powell, Isaac J and Dyson, Greg and Land, Susan and Ruterbusch, Julie and Bock, Cathryn H and Lenk, Steve and Herawi, Mehsati and Everson, Richard and Giroux, Craig N and Schwartz, Ann G and others},
+  journal = {Cancer Epidemiology and Prevention Biomarkers},
+  volume = {22},
+  number = {5},
+  pages = {891--897},
+  year = {2013},
+  publisher = {AACR}
+}
+</pre>
+
+<a name="siegel2019cancer"></a><pre>
+@article{<a href="theory-and-ethics.html#siegel2019cancer">siegel2019cancer</a>,
+  title = {Cancer statistics, 2019},
+  author = {Siegel, Rebecca L and Miller, Kimberly D and Jemal, Ahmedin},
+  journal = {CA: a cancer journal for clinicians},
+  volume = {69},
+  number = {1},
+  pages = {7--34},
+  year = {2019},
+  publisher = {Wiley Online Library}
 }
 </pre>
 
